@@ -7,8 +7,8 @@ import time
 from asm3.locales import *
 
 
-VERSION = "47u [Tue  6 Jun 18:37:04 BST 2023]"
-BUILD = "06061837"
+VERSION = "47u [Wed  7 Jun 08:28:16 BST 2023]"
+BUILD = "06070828"
 
 DMY = ( "%d/%m/%Y", "%d/%m/%y" )
 HDMY = ( "%d-%m-%Y", "%d-%m-%y" )
