@@ -1,6 +1,7 @@
 47
 ================
 
+07/06/23 Filter deceased animals out of trial adoption ending alerts
 06/06/23 Shelter view grouping for litters
 06/06/23 Tidy up license screen code, show animal emblems
 06/06/23 Link movement/licence documents to animals+people instead of copying #1261
